# skyr

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  skyr.py  tox.ini
.github/workflows/: ci.yaml  main.yml  release.yaml  release.yml
assets/: logo.afdesign
docs/: index.html  tacit-lite.css
script/: build  clean  cov  fmt  lint  test
src/: skyr.py
src/skyr/: __init__.py  __main__.py
tests/: ruff.toml  skyr_test.py
tests/assets/: a_file
tests/assets/other_dir/: build
tests/assets/script/: build  no-shebang
tests/assets/scripts/: not-executable
