[build-system]
build-backend = "flit_core.buildapi"
requires = [
  "flit-core>=3.2,<4",
]

[project]
name = "skyr"
readme = "README.md"
license = { text = "ISC" }
authors = [
  { name = "Nikita Karamov", email = "me@kytta.dev" },
]
maintainers = [
  { name = "Nikita Karamov", email = "me@kytta.dev" },
]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: ISC License (ISCL)",
  "Operating System :: MacOS",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Utilities",
  "Typing :: Typed",
]
dependencies = []
dynamic = ["description", "version"]

[project.urls]
Changelog = "https://codeberg.org/kytta/skyr/src/branch/main/CHANGELOG.md"
Source = "https://codeberg.org/kytta/skyr"
Issues = "https://codeberg.org/kytta/skyr/issues"

[project.scripts]
skyr = "skyr:main"

[dependency-groups]
dev = [
  "ruff",
  { include-group = "tests" },
]
tests = [
  "pytest",
]
cov = [
  "covdefaults",
  "coverage[toml]",
  { include-group = "tests" },
]

[tool.autopep8]
ignore = [ "W503" ]

[tool.coverage.run]
parallel = true
plugins = [ "covdefaults" ]

[tool.mypy]
strict = true
pretty = true
enable_error_code = [ "ignore-without-code" ]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
addopts = "--tb=short --showlocals"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
  "A",   # flake8-builtins
  "B",   # flake8-bugbear
  "BLE", # flake8-blind-except
  "C4",  # flake8-comprehensions
  "C90", # mccabe
  "DTZ", # flake8-datetimez
  "E",
  "EM",  # flake8-errmsg
  "ERA", # eradicate
  "F",   # pyflakes
  "FBT", # flake8-boolean-trap
  "ICN", # flake8-import-conventions
  "ISC", # flake8-implicit-str-concat
  "N",   # pep8-naming
  "PIE", # flake8-pie
  "PL",  # pylint
  "PTH", # flake8-use-pathlib
  "Q",   # flake8-quotes
  "RET", # flake8-return
  "RUF", # ruff
  "S",   # bandit
  "SIM", # flake8-simplify
  "T20", # flake8-print
  "TRY", # tryceratops
  "W",   # pycodestyle
]
