[build-system]
build-backend = "flit_core.buildapi"
requires = [
  "flit-core>=3.2,<4",
]

[project]
name = "skyr"
readme = "README.md"
license = { text = "ISC" }
authors = [
  { name = "Nikita Karamov", email = "me@kytta.dev" },
]
maintainers = [
  { name = "Nikita Karamov", email = "me@kytta.dev" },
]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: ISC License (ISCL)",
  "Operating System :: MacOS",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Utilities",
  "Typing :: Typed",
]
dependencies = []
dynamic = ["description", "version"]

[project.urls]
Changelog = "https://codeberg.org/kytta/skyr/src/branch/main/CHANGELOG.md"
Source = "https://codeberg.org/kytta/skyr"
Issues = "https://codeberg.org/kytta/skyr/issues"

[project.scripts]
skyr = "skyr:main"

[dependency-groups]
dev = [
  "ruff",
  { include-group = "tests" },
]
tests = [
  "pytest>=9",
]
cov = [
  "covdefaults",
  "coverage[toml]",
  { include-group = "tests" },
]

[tool.autopep8]
ignore = [ "W503" ]

[tool.coverage.run]
parallel = true
plugins = [ "covdefaults" ]

[tool.mypy]
strict = true
pretty = true
enable_error_code = [ "ignore-without-code" ]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest]
minversion = "9.0"
addopts = ["--tb=short", "--showlocals"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "AIR",     # we're not Airflow
  "ANN",     # Mypy is better at this
  "COM",     # ruff format takes care of our commas
  "D1",      # We don't care about missing docstrings
  "D203",    # Class docstrings should not have blank lines
  "D213",    # Multiline summary should be on first line
  "DJ",      # we're not Django
  "E501",    # leave line-length enforcement to ruff format
  "FAST",    # we're not FastAPI
  "FIX",     # Yes, we want markers.
  "ISC001",  # conflicts with ruff format
  "NPY",     # we're not NumPy
  "PD",      # we're not pandas
  "PLC0415", # sometimes, imports have to live elsewhere
  "TD",      # we don't follow other people's todo style
  "UP031",   # format() is slow as molasses; % and f'' FTW.
]

[tool.ruff.lint.per-file-ignores]
"**/*_test.py" = [
  "S",       # security concerns don't matter in tests
  "PLR0913", # too many function arguments
  "FBT",     # Boolean positional arg in function definition
  "TRY",     # exception best practices don't matter in tests
]

[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 2
